--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </form>
         </div>
     
-        <!-- Step 2: Form Pilih Jawaban Pacar Faisal -->
+        <!-- Step 2: Form Pilih Jawaban Teman Dimas -->
         <div id="step2" class="step-container" style="display: none;">
             <h4>Apakah kamu temannya Dimas?</h4>
             <form id="verification">
@@ -96,9 +96,9 @@
 
         <div class="five">
             <p class="idea-1">Jalan kita memang tak selalu mudah...</p>
-            <p class="idea-2">Tapi izinkan aku melihatmu berjuang</p>
+            <p class="idea-2">Tapi izinkan aku terus berjuang, menemanimu setiap langkahnya.</p>
             <p class="idea-3">
-                temanmu yang masih terus belajar tentang menjadi yang terbaik<br>
+                pacarmu yang masih terus belajar tentang menjadi yang terbaik<br>
                 <strong>karena....</strong>
                 
             </p>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/tamara.jpg" alt="profile" class="profile-picture" id="imagePath" />
+            <img src="./img/" alt="profile" class="profile-picture" id="imagePath" />
             <img src="img/hat.svg" alt="hat" class="hat" />
             <!-- <img src="img/hat.svg" alt="hat" class="hats text-end" /> -->
             <div class="wish">
