--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p class="idea-1">Jalan kita memang tak selalu mudah...</p>
             <p class="idea-2">Tapi izinkan aku terus berjuang, menemanimu setiap langkahnya.</p>
             <p class="idea-3">
-                pacarmu yang masih terus belajar tentang menjadi yang terbaik<br>
+                temamu yang masih terus belajar tentang menjadi yang terbaik<br>
                 <strong>karena....</strong>
                 
             </p>
