--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/" alt="profile" class="profile-picture" id="imagePath" />
+            <img src="./img/tamara.jpg" alt="profile" class="profile-picture" id="imagePath" />
             <img src="img/hat.svg" alt="hat" class="hat" />
             <!-- <img src="img/hat.svg" alt="hat" class="hats text-end" /> -->
             <div class="wish">
